# postgres_geospatial

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.toml
app/: main.py
docker/: app.dockerfile
scripts/: poc.sql
