[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Carmichael, Lucas <carmichael.ccs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.23"
dynaconf = "^3.2.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
